<resources>
    <string name="app_name">ejercicio_bitsa-bitnami</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="loading_text">The visitors are playing the game</string>
    <string name="retry_action">Retry</string>
    <string name="castle_status">Castle status</string>
    <string name="game_status">Game status</string>
    <string name="number_window_states">Number of windows in each state</string>
    <string name="number_opened_windows">Number of opened windows: %1$d</string>
    <string name="number_closed_windows">Number of closed windows: %1$d</string>
    <string name="number_windows_opened_right">Number of windows opened by the right wing: %1$d</string>
    <string name="number_windows_opened_left">Number of windows opened by the left wing: %1$d</string>
    <string name="id_winners">The ids of the winners</string>
    <string name="id_second_winners">The ids of the second winners</string>

</resources>